--- a/index.html
+++ b/index.html
@@ -15,9 +15,23 @@
 			integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
-		<title>TEMPLATE</title>
+		<title>CAMPOMINATO GRID</title>
 	</head>
 	<body>
+		<div class="little-container d-flex flex-wrap">
+			<div class="deb square">5</div>
+			<div class="deb square">5</div>
+			<div class="deb square">5</div>
+			<div class="deb square">5</div>
+			<div class="deb square">5</div>
+			<div class="deb square">5</div>
+			<div class="deb square">5</div>
+			<div class="deb square">5</div>
+			<div class="deb square">5</div>
+			<div class="deb square">5</div>
+		</div>
+
+		<script type="text/javascript" src="./js/functions.js"></script>
 		<script type="text/javascript" src="./js/script.js"></script>
 	</body>
 </html>
