--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 	</head>
 	<body>
 		<div class="little-container d-flex flex-wrap">
-			<div class="deb square">5</div>
-			<div class="deb square">5</div>
-			<div class="deb square">5</div>
-			<div class="deb square">5</div>
-			<div class="deb square">5</div>
-			<div class="deb square">5</div>
-			<div class="deb square">5</div>
-			<div class="deb square">5</div>
-			<div class="deb square">5</div>
-			<div class="deb square">5</div>
+			<!-- <div class="deb square">5</div>
+			<div class="square">5</div>
+			<div class="square">5</div>
+			<div class="square">5</div>
+			<div class="square">5</div>
+			<div class="square">5</div>
+			<div class="square">5</div>
+			<div class="square">5</div>
+			<div class="square">5</div>
+			<div class="square">5</div> -->
 		</div>
 
 		<script type="text/javascript" src="./js/functions.js"></script>
