--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<title>CAMPOMINATO GRID</title>
 	</head>
 	<body>
+		<h1 class="text-center fw-bold display-4 m-3">CAMPOMINATO GRID</h1>
 		<div class="little-container d-flex flex-wrap">
 			<!-- <div class="deb square">5</div>
 			<div class="square">5</div>
