B-1 added play btn

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 			<div class="square">5</div>
 			<div class="square">5</div> -->
 		</div>
-
+		<div class="row m-0">
+			<button id="btn" class="col-1 bg-warning my-2 rounded fw-bold fs-5">AVVIA GIOCO</button>
+		</div>
 		<script type="text/javascript" src="./js/functions.js"></script>
 		<script type="text/javascript" src="./js/script.js"></script>
 	</body>
