--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="row justify-content-center m-0">
 			<div class="col-2 m-0 align-self-center select-input py-4">
 				<select
-					class="form-select text-center my-3 mx-auto w-75"
+					class="form-select text-center my-3 mx-auto w-75 fw-bold"
 					aria-label="Default select example">
 					<option selected>Select a game mode</option>
 					<option value="1">Easy</option>
