changed 3 grid system to 1 at click

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 
 			<div class="col-5">
 				<h1 class="text-center fw-bold display-4 mt-4">CAMPOMINATO GRID</h1>
-				<div class="easy-container d-flex flex-wrap d-none"></div>
-				<div class="medium-container d-flex flex-wrap d-none"></div>
-				<div class="hard-container d-flex flex-wrap d-none"></div>
+				<div class="easy-container d-flex flex-wrap"></div>
 			</div>
 		</div>
 
