--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 				<select
 					class="form-select text-center my-3 mx-auto w-75 fw-bold"
 					aria-label="Default select example">
-					<option selected>Select a game mode</option>
-					<option value="1">Easy</option>
-					<option value="2">Medium</option>
-					<option value="3">Hard</option>
+					<option selected>SELECT GAME MODE</option>
+					<option value="1">EASY</option>
+					<option value="2">MEDIUM</option>
+					<option value="3">HARD</option>
 				</select>
 
 				<div class="text-center my-4">
