--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 	<body>
 		<div class="row justify-content-center m-0">
 			<div class="col-2 m-0 align-self-center select-input py-4">
-				<select
-					class="form-select text-center my-3 mx-auto w-75 fw-bold"
-					aria-label="Default select example">
+				<select class="form-select text-center my-3 mx-auto fw-bold">
 					<option selected>SELECT GAME MODE</option>
 					<option value="1">EASY</option>
 					<option value="2">MEDIUM</option>
@@ -30,7 +28,7 @@
 				</select>
 
 				<div class="text-center my-4">
-					<button id="btn" class="btn bg-warning my-2 rounded fw-bold fs-4 p-3">
+					<button id="btn" class="btn bg-warning my-2 rounded fw-bold fs-4 p-3 w-100">
 						PLAY GAME
 					</button>
 				</div>
